--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="format-detection" content="telephone=no">
+		<!-- cache -->
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" /> 
+		<meta http-equiv="cache-control" content="max-age=0" /> 
+		<meta http-equiv="Pragma" content="no-cache" /> 
+		<meta http-equiv="Expires" content="0" /> 
+		<!-- cache end -->
+		<link rel="shortcut icon" href="/images/favicons/favicon.ico" type="image/x-icon">
+		<link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192" href="/images/favicons/android-chrome-192x192.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/images/favicons/android-chrome-96x96.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+		<link rel="manifest" href="/images/favicons/manifest.json">
+		<link rel="yandex-tableau-widget" href="/images/favicons/yandex-browser-manifest.json">
+		<meta name="msapplication-TileColor" content="#1B1C22">
+		<meta name="msapplication-TileImage" content="/images/favicons/mstile-144x144.png">
+		<meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+		<meta name="theme-color" content="#1B1C22">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
