--- a/src/app.html
+++ b/src/app.html
@@ -26,7 +26,7 @@
 		<meta name="theme-color" content="#1B1C22">
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" clue-custom>
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
